r107 - september, 15, 2009
    * form.css : custom .button class
    * schema.yml : prefix "piwam_" has been added to all the tables
    * symfony propel:build-model
    * /data/updates/1.1beta2-to-1.1/r107.sql : we rename all the tables
    * /doc/piwam-install.sql : up to date
    * issue #22 has been fixed


r106 - september, 15, 2009
    * /test/unit/DateToolsTest.php : new file implementing tests for DateTools
    * /test/unit/ParamsToolsTest.php : new file implementing tests for
      ParamsTools class
    * /test/unit/StringToolsTest.php : new file implementing tests for
      StringTools class
    

r105 - september, 13, 2009
    * /test/bootstrap/unit.php : creation of a sfContext
    * /test/unit/ConfiguratorTest.php : new file implementing tests for
      Configurator class
    * /lib/misc/Configuration.class.php : $associationId is now given as
      parameter to avoid use of sfContext in this class
    * ConfigForm.class.php : code has been refactored to give $associationId
    * association : actions > code has been refactored to give $associationId
    * MembrePeer.php : doSelectOrderBy > code has been refactored to provide 
      $associationId to Configurator
    * AssociationPeer.php : new method retrieveByName($name)
    * All the files : tabs have been replaced by spaces
    

r104 - september, 13, 2009
    * /doc/TROUBLESHOOTING-FR : new file, indexing known issues
    * /doc/README-FR refers to TROUBLESHOOTING-FR in case of issue
    * membre : indexSuccess.php > legend block has been redesigned
    * cotisationtype : indexSuccess.php > validity entry in the header of table
      is now specified as months and not in years
    * CotisationTypeForm.class.php : default value of 'valide' has been set to
      12 months
    * form.css : formLinkButton size has been adjusted (a little bit smaller)


r103 - september, 12, 2009
    * /web/install.php : has been removed to avoid loop issue